documentation register user
